done all input calculations - still inaccurate

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                               <div class="select is-fullwidth">
                                 <select class="input-fields" name="level-repair">
                                   <option>--</option>
-                                  <option value="Basic" cost-value="35">Basic</option>
-                                  <option value="Medium" cost-value="50">Medium</option>
-                                  <option value="Everything" cost-value="80">Everything</option>
+                                  <option value="Basic">Basic</option>
+                                  <option value="Medium">Medium</option>
+                                  <option value="Everything">Everything</option>
                                   <option value="Other">Other</option>
                                 </select>
                               </div>
@@ -313,12 +313,23 @@
 
         <!-- NET PROFIT SECTION -->
         <div class="columns is-desktop mt-4 mb-4">
-          <div class="column is-full">
+          <div class="column">
             <div class="card lo-card light-orange">
               <div class="card-content has-text-centered">
                 <div class="content">
                   <p class="title is-1 np">$0</p>
                   <p class="subtitle is-3">Net Profit</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="card lo-card light-orange">
+              <div class="card-content has-text-centered">
+                <div class="content">
+                  <p class="title is-1 tnp">$0</p>
+                  <p class="subtitle is-3">Total Net Profit</p>
                 </div>
               </div>
             </div>
@@ -456,7 +467,7 @@
                         <td class="tle">$0</td>
                         <td class="ba">$0</td>
                         <td class="bcc">$0</td>
-                        <td class="com">$</td>
+                        <td class="com">$0</td>
                       </tr>
                     </tbody>
                   </table>
