comma separator - number values

--- a/index.html
+++ b/index.html
@@ -554,12 +554,12 @@
                       <tr>
                         <td><b>Lender Break Even - Assuming Rehab is Complete</b></td>
                         <td class="lbearc"></td>
-                        <td><span class="lbearcltv"></span>% LTV</td>
+                        <td><span class="lbearcltv">%</span> LTV</td>
                       </tr>
                       <tr>
                         <td><b>Lender Break Even - Assuming Rehab is NOT Complete</b></td>
                         <td class="lbearnc"></td>
-                        <td><span class="lbearncltv"></span>% LTV</td>
+                        <td><span class="lbearncltv">%</span> LTV</td>
                       </tr>
                     </tbody>
                   </table>
